Fix white space searches

--- a/public/testWHS2.css
+++ b/public/testWHS2.css
@@ -355,4 +355,5 @@ img.selected {
     padding: 0.8vw 1vw;
     border-radius: 100%;
     z-index: 2;
+    border: 1px solid white;
 }
